Revision history for {{$dist->name}}

{{$NEXT}}

0.27      2015-02-22 11:17:05 -0500
  - Interface to alternate ABIs / calling conventions
  - Added abi method
  - Added abis class method
  - Simplify Win32 probe
  - Added FFI::Platypus::Lang::Win32 which provides data types used by
    the Windows API.  Takes care of subtle differences between
    Win32 and Win64.
  - Fixed bugs specific to 5.8.x
  - Language plugins can now specify an ABI with abi class method
  - Default ABI for FFI::Platypus::Lang::Win32 is stdcall on 32bit windows

0.26      2015-02-18 17:47:43 -0500
  - Added support for pointers to longdouble (in C "long double *") type
  - Added support for array of longdouble (in C "long double []") type
  - Added tied array interface for record array members (see FFI::Platypus::Record::TieArray)
    Marked as EXPERIMENTAL
  - Array members of records can now be accessed (set/get) by element
  - Array members of records types are now documented (see FFI::Platypus::Record)
  - Bugfix: array wasn't being updated on return for variable length
    array types
  - Should now build with an Alien::FFI that was built with ALIEN_FORCE=1

0.25      2015-02-16 20:18:41 -0500
  - Probe for proper long double support instead of trusting ffi.h
  - This disables long double support on cygwin, which does not seem to
    work, at least in so far as it seems to work on other platforms
    patches to prove otherwise are welcome.

0.24      2015-02-16 15:38:58 -0500
  - Fixed Windows / Strawberry configuration issues

0.23      2015-02-16 05:44:39 -0500
  - Support for longdouble (in C "long double") type.
  - Support for complex_float (in C "float complex") type
  - Support for complex_double (in C "double complex") type
  - Fixes for Big Endian architectures (tested on Linux PowerPC)

0.22      2015-02-12 07:47:32 -0500
  - Variable length arrays
  - More recent version of Config::AutoConf required in the configure step
    (gh#33 zmughal)